@@ -143,6 +143,8 @@ body {
 
 <p><strong>offset</strong> | <code>int</code> | The vertical offset for the combat text&rsquo;s starting position.</p>
 
+<p><strong>fade_duration</strong> | <code>duration</code> | How long the combat text will spend fading out in &lsquo;ms&rsquo; or &rsquo;s'.</p>
+
 <hr />
 
 <h4>CursorManager</h4>
