@@ -67,6 +67,7 @@ private:
 	int update_flag;
 	bool hidden;
 	bool window_resize_flag;
+	uint8_t alpha;
 	Sprite *label;
 
 	std::string text;
@@ -89,6 +90,7 @@ public:
 	void setText(const std::string& _text);
 	void setColor(const Color& _color);
 	void setFont(const std::string& _font);
+	void setAlpha(uint8_t _alpha);
 	void setFromLabelInfo(const LabelInfo& label_info);
 
 	std::string getText();
